numbers completed